--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -15,7 +15,7 @@ $this->headTitle($title);
         <th>Artist</th>
         <th>&nbsp;</th>
     </tr>
-    <?php foreach ($albums as $album) : ?>
+    <?php foreach ($paginator as $album) : ?>
         <tr>
             <td><?= $this->escapeHtml($album->title) ?></td>
             <td><?= $this->escapeHtml($album->artist) ?></td>
@@ -26,3 +26,14 @@ $this->headTitle($title);
         </tr>
     <?php endforeach; ?>
 </table>
+
+<?= $this->paginationControl(
+// The paginator object:
+    $this->paginator,
+    // The scrolling style:
+    'sliding',
+    // The partial to use to render the control:
+    'partial/paginator',
+    // The route to link to when a user clicks a control link:
+    ['route' => 'album']
+) ?>
